[gd_scene load_steps=4 format=3 uid="uid://b04q4t20kmm12"]

[ext_resource type="Script" uid="uid://cxli1nn0cc0o4" path="res://scripts/asteroid.gd" id="1_pofgt"]
[ext_resource type="PackedScene" uid="uid://23cbls1yy4dw" path="res://scenes/components/component_damage.tscn" id="2_vv68d"]
[ext_resource type="PackedScene" uid="uid://ea2vv836t3ay" path="res://scenes/components/component_wrap.tscn" id="3_si1u6"]

[node name="MEDIUM Asteroid" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_pofgt")

[node name="component_damage" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_vv68d")]
collision_layer = 4
collision_mask = 10
parent = NodePath("..")
health = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="component_damage"]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(76, -74, -38, -88, -84, -32, -64, 46, -10, 72, 68, 56, 96, 22)

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(43, 10, 34, -33, -17, -39, -37, -15, -28, 20, -4, 31, 32, 24)
closed = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(3, -4)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-70, 54, -90, -24, -44, -80, 70, -66, 90, 30, 66, 63, -16, 80)

[node name="component_wrap" parent="." node_paths=PackedStringArray("COMPONENT_PARENT") instance=ExtResource("3_si1u6")]
COMPONENT_PARENT = NodePath("..")

[node name="wrap_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="wrap_timer" to="." method="_on_wrap_timer_timeout"]
